--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "license": "MIT",
 
   "devDependencies": {
-    "electron": "^4.0.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {
+    "electron": "^4.0.5"
   }
 }
