--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "imagine",
   "version": "1.0.0",
   "description": "a web image fetcher",
-  "main": "index.js",
+  "main": "dist/main.js",
   "repository": "git@github.com:kadopoly/imagine.git",
   "author": "kadopoly",
   "license": "MIT",
-
+  "scripts": {
+    "start": "electron .",
+    "build": "webpack",
+    "build:dev": "export NODE_ENV=development; webpack"
+  },
   "devDependencies": {
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
